Closed
Bug 1550881
Opened 6 years ago
Closed 6 years ago
Don't allow re-entry into document.open from unload events of descendant frames
Categories
(Core :: DOM: Core & HTML, defect, P2)
Core
DOM: Core & HTML
Tracking
()
RESOLVED
FIXED
mozilla69
People
(Reporter: bzbarsky, Assigned: bzbarsky)
References
Details
Attachments
(1 file)
See https://github.com/whatwg/html/issues/4611.
This is blocking the work on bug 1550524, though for silly reasons: we end up triggering an assertion in wpt that I can trigger without those patches too, by slightly tweaking the testcase.
![]() |
Assignee | |
Updated•6 years ago
|
Assignee: nobody → bzbarsky
![]() |
Assignee | |
Comment 1•6 years ago
|
||
Updated•6 years ago
|
Priority: -- → P2
Pushed by bzbarsky@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/63a8fe448f09
Prevent document.open() calls from descendant subframes' unload handlers triggered by document.open() from doing anything useful. r=hsivonen
Comment 3•6 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 6 years ago
status-firefox69:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla69
Updated•6 years ago
|
You need to log in
before you can comment on or make changes to this bug.
Description
•