Bug 1550881.  Prevent document.open() calls from descendant subframes' unload handlers triggered by document.open() from doing anything useful.  r=hsivonen

Differential Revision: https://phabricator.services.mozilla.com/D30728

--HG--
extra : moz-landing-system : lando